update wikipedia image and add overflow: hidden to project class to stop blur overflowing when hovering

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -391,6 +391,7 @@ nav:after { @include clearing; }*/
 			max-width: 22.5em;
 			background-color: #FFF;
 			position: relative;
+			overflow: hidden;
 			@include box-shadow(0px 0px 2px 2px rgba(0,0,0,0.25));
 			@include min-size(900px) {
 				max-height: 22.5em;
